fix: fixes grid in too large screens

--- a/style.css
+++ b/style.css
@@ -98,12 +98,18 @@ span {
   font-size: 2rem;
 }
 
-main {
+.main-grid {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
   gap: 16px;
 
   padding: 1rem;
+}
+
+@media only screen and (min-width: 1440px) {
+  .main-grid {
+    grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
+  }
 }
 
 main > section {
